--- a/requirements.txt
+++ b/requirements.txt
@@ -4,16 +4,20 @@ bidict==0.23.1
 blinker==1.9.0
 cachelib==0.13.0
 certifi==2026.1.4
+charset-normalizer==3.4.4
 click==8.3.1
 colorama==0.4.6
 coverage==7.13.1
 distro==1.9.0
 dnspython==2.8.0
+docker==7.1.0
+email-validator==2.3.0
 eventlet==0.40.4
 Flask==3.1.2
 Flask-Session==0.8.0
 Flask-SocketIO==5.6.0
 Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
 greenlet==3.3.0
 gunicorn==23.0.0
 h11==0.16.0
@@ -25,10 +29,12 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 jiter==0.12.0
 Markdown==3.10.1
+markdown-it-py==4.0.0
 MarkupSafe==3.0.3
+mdurl==0.1.2
 msgspec==0.20.0
 narwhals==2.16.0
-numpy
+numpy==2.4.2
 openai==2.15.0
 packaging==25.0
 pandas==3.0.0
@@ -45,6 +51,8 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 python-engineio==4.13.0
 python-socketio==5.16.0
+requests==2.32.5
+rich==14.3.3
 simple-websocket==1.1.0
 six==1.17.0
 sniffio==1.3.1
@@ -52,8 +60,7 @@ SQLAlchemy==2.0.45
 tqdm==4.67.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+urllib3==2.6.3
 Werkzeug==3.1.5
 wsproto==1.3.2
-rich~=14.3.3
-WTForms~=3.2.1
-Flask-WTF
+WTForms==3.2.1
